Prepare for beta 1.

--- a/metadata/package.xml
+++ b/metadata/package.xml
@@ -8,8 +8,8 @@
         <packagedescription language="de-informal"><![CDATA[Fügt eine abstrakte Klasse für gecashte Liste hinzu.]]></packagedescription>
         
         <isapplication>0</isapplication>
-        <version>1.0.0 Alpha 1</version>
-        <date>2013-05-20</date>
+        <version>1.0.0 Beta 1</version>
+        <date>2013-07-23</date>
     </packageinformation>
     
     <authorinformation>
