--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Cached List" default="build">
 	<target name="clean" description="Deletes old tar files.">
-		<delete>
+		<delete failonerror="false">
 			<fileset dir="metadata" includes="**/*.tar"/>
 		</delete>
 		<delete failonerror="false" dir="build" />
