Prepare release beta 2.

--- a/metadata/package.xml
+++ b/metadata/package.xml
@@ -8,8 +8,8 @@
         <packagedescription language="de-informal"><![CDATA[Fügt eine abstrakte Klasse für gecashte Liste hinzu.]]></packagedescription>
         
         <isapplication>0</isapplication>
-        <version>1.0.0 Beta 1</version>
-        <date>2013-08-08</date>
+        <version>1.0.0 Beta 2</version>
+        <date>2013-08-26</date>
     </packageinformation>
     
     <authorinformation>
@@ -24,5 +24,8 @@
     <instructions type="install">
         <!-- files -->
         <instruction type="file">files.tar</instruction>
+    </instructions>
+    
+    <instructions type="update" fromversion="1.0.0 Beta 1">
     </instructions>
 </package>
