--- a/metadata/package.xml
+++ b/metadata/package.xml
@@ -8,8 +8,8 @@
         <packagedescription language="de-informal"><![CDATA[Fügt eine abstrakte Klasse für gecashte Liste hinzu.]]></packagedescription>
         
         <isapplication>0</isapplication>
-        <version>1.0.1</version>
-        <date>2015-03-11</date>
+        <version>1.1.0</version>
+        <date>2015-04-06</date>
     </packageinformation>
     
     <authorinformation>
@@ -18,7 +18,7 @@
     </authorinformation>
     
     <requiredpackages>
-        <requiredpackage minversion="2.0.11 pl 1">com.woltlab.wcf</requiredpackage>
+        <requiredpackage minversion="2.1.2">com.woltlab.wcf</requiredpackage>
     </requiredpackages>
     
     <instructions type="install">
@@ -26,7 +26,7 @@
         <instruction type="file">files.tar</instruction>
     </instructions>
     
-    <instructions type="update" fromversion="1.0.0">
+    <instructions type="update" fromversion="1.0.1">
     	<instruction type="file">files.tar</instruction>
     </instructions>
 </package>
