--- a/metadata/package.xml
+++ b/metadata/package.xml
@@ -26,7 +26,7 @@
         <instruction type="file">files.tar</instruction>
     </instructions>
     
-    <instructions type="update" fromversion="1.0.1">
+    <instructions type="update" fromversion="1.0.*">
     	<instruction type="file">files.tar</instruction>
     </instructions>
 </package>
